objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Calculator watch</fullName>
            </value>
            <value>
                <fullName>Camera phones</fullName>
            </value>
            <value>
                <fullName>Digital camcorder</fullName>
            </value>
            <value>
                <fullName>Digital media player</fullName>
            </value>
            <value>
                <fullName>Digital still camera</fullName>
            </value>
            <value>
                <fullName>Digital video camera</fullName>
            </value>
            <value>
                <fullName>Enterprise digital assistant</fullName>
            </value>
            <value>
                <fullName>Feature phones</fullName>
            </value>
            <value>
                <fullName>Front-facing camera</fullName>
            </value>
            <value>
                <fullName>Graphing calculator</fullName>
            </value>
            <value>
                <fullName>Handheld game console</fullName>
            </value>
            <value>
                <fullName>Handheld PC</fullName>
            </value>
            <value>
                <fullName>Head-mounted display</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Mobile Internet device</fullName>
            </value>
            <value>
                <fullName>Netbook</fullName>
            </value>
            <value>
                <fullName>Pagers</fullName>
            </value>
            <value>
                <fullName>Personal digital assistant</fullName>
            </value>
            <value>
                <fullName>Personal navigation device</fullName>
            </value>
            <value>
                <fullName>Phablets</fullName>
            </value>
            <value>
                <fullName>Pocket calculator</fullName>
            </value>
            <value>
                <fullName>Portable media player</fullName>
            </value>
            <value>
                <fullName>Smart cards</fullName>
            </value>
            <value>
                <fullName>Smartphones</fullName>
            </value>
            <value>
                <fullName>Smartwatch</fullName>
            </value>
            <value>
                <fullName>Tablet computer</fullName>
            </value>
            <value>
                <fullName>Ultra-mobile PC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>