objects/Product2/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The quantity of products, what is currently present in our shop</description>
    <label>Stock</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>