objects/Product2/validationRules/Validate_stock_quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_stock_quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Stock__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>Quantity of stock&apos;s product can&apos;t be less then 0.</errorMessage>
</ValidationRule>