objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Vendor__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Stock__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>